--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watchTestControllers": "nodemon --watch src/controllers -e js,spec.js --exec \"jasmine\"",
-    "testUnit": "echo \"No unit tests specified\"",
-    "testControllers": "jasmine src/controllers/**/*.spec.js",
-    "testRoutes": "",
+    "test": "jasmine-node spec/routes",
+    "test:watch": "jasmine-node spec/routes --autotest",
     "testDB": "",
     "buildSwaggerFromJSDoc": "npx swagger-jsdoc -d ./src/swaggerDef.js src/routes/*.js lib/**/*.js",
     "testCI": "",
