--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Artisean-Ecommerce-Api",
+  "name": "artisean-ecommerce-api",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -27,14 +27,12 @@
   "homepage": "https://github.com/jtmorrisbytes/react-express#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "autodiscover-modules": "^1.1.2",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "massive": "^6.2.0",
-    "morgan": "^1.9.1",
-    "swagger-generator-express": "^2.1.1"
+    "morgan": "^1.9.1"
   },
   "private": true,
   "devDependencies": {
